added first portfolio image and assets folder, updated css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
   </head>
 
   <body>
-    <!--nav-->
     <header>
+      <nav>
+        <a href="#">Contact</a>
+        <a href="#">Contact</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
+    
 
+    <h1 id="page_head">James Portfolio</h1>
 
-    <h1>Personal Portfolio</h1>
+    <section id="about">
+      <h2>About me</h2>
+      <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
+    </section>
 
-    <h2>About me</h2>
+    <section>
+      <h2>Portfolio</h2>
+      <img src="assets/project1.png" width="500" height="400">
+
+    </section>
+
 
     <form>
       <h2>Contact Us</h1>
@@ -35,6 +49,8 @@
       </div>
     </form>
 
-    <footer>Designed by <a href="www.yoursitemaker.com">YourSiteMaker</a></footer>
+    <footer>
+      Designed by <a href="https://github.com/Dawa12?tab=repositories">Dawa Sherpa</a>
+    </footer>
   </body>
 </html>
