--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <a href="#">Contact</a>
       </nav>
     </header>
-    
 
-    <h1 id="page_head">James Portfolio</h1>
+
+    <h1 id="page_head">Dawa Portfolio</h1>
 
     <section id="about">
       <h2>About me</h2>
