--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
     <section id="about">
       <h2>About me</h2>
+      <img src="./assets/profile.jpg" alt="profile_pic" />
       <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
     </section>
 
-    <section>
+    <section id="portfolio">
       <h2>Portfolio</h2>
       <img src="assets/project1.png" width="500" height="400">
 
@@ -30,7 +31,7 @@
 
 
     <form>
-      <h2>Contact Us</h1>
+      <h2>Contact Me</h1>
       <div>
         First Name: <input type="text" name="firstname" placeholder="First Name"><br>
       </div>
