--- a/index.html
+++ b/index.html
@@ -14,42 +14,51 @@
       </nav>
     </header>
 
+<!---*****  main *****--->
+    <div id="main">
+      <h1>Dawa Portfolio</h1>
+      <section id="about">
+        <h2>About me</h2>
+        <img src="./assets/profile.jpg" alt="profile_pic" />
+        <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
+      </section>
 
-    <h1 id="page_head">Dawa Portfolio</h1>
+      <section id="portfolio_container">
+        <h1>Projects</h1>
+        <section class="portfolio_item">
+          <h2>Portfolio</h2>
+          <img src="assets/project1.png">
+        </section>
 
-    <section id="about">
-      <h2>About me</h2>
-      <img src="./assets/profile.jpg" alt="profile_pic" />
-      <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
-    </section>
+        <section class="portfolio_item">
+          <h2>Portfolio</h2>
+          <img src="assets/project1.png">
+        </section>
+      </section>
 
-    <section id="portfolio">
-      <h2>Portfolio</h2>
-      <img src="assets/project1.png" width="500" height="400">
+      <form id="contact_form">
+        <h2>Contact Me</h1>
+        <div>
+          First Name: <input type="text" name="firstname" placeholder="First Name"><br>
+        </div>
 
-    </section>
+        <div>
+          Last Name: <input type="text" name="lastname" placeholder="Last Name"><br>
+        </div>
+
+        <div>
+          Message: <br>
+          <textarea placeholder="Enter your Message"></textarea>
+        </div>
+
+        <div>
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+    </div>
 
 
-    <form>
-      <h2>Contact Me</h1>
-      <div>
-        First Name: <input type="text" name="firstname" placeholder="First Name"><br>
-      </div>
-
-      <div>
-        Last Name: <input type="text" name="lastname" placeholder="Last Name"><br>
-      </div>
-
-      <div>
-        Message: <br>
-        <textarea placeholder="Enter your Message"></textarea>
-      </div>
-
-      <div>
-        <input type="submit" value="Submit">
-      </div>
-    </form>
-
+<!---*****  footer *****--->
     <footer>
       Designed by <a href="https://github.com/Dawa12?tab=repositories">Dawa Sherpa</a>
     </footer>
