--- a/index.html
+++ b/index.html
@@ -25,36 +25,87 @@
 
       <section id="portfolio_container">
         <h1>Projects</h1>
+
+        <!-- portfolio item: Track Map -->
         <section class="portfolio_item">
-          <h2>Portfolio</h2>
-          <img src="assets/project1.png">
+          <h2>Track Map</h2>
+          <img src="assets/track_map_map.png">
+          <img src="assets/track_map_street_view.png">
+
+          <p>
+            I developed Track Map to gain practice in working with an API and rendering API results in our very own Node Express app. I chose the Google Maps API because I wanted hands on experience with a very well known API. I knew that there would be better documentation for it and also felt it would be more likely for me to use again.
+
+            The most difficult aspect of this project was learning how to quickly adapt to a new API. I used the Google Maps Javascript API. I had difficulty in rendering multiple maps in an .ejs file and therefore eventually settled for only links to saved locations instead of actually displaying.
+
+            I learned how to better manage my time through this project.
+          </p>
+
+          <a href="https://nyc-track-map.herokuapp.com/">
+            <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+          <a href="https://github.com/Dawa12/Google_Maps_Street_View">
+            <img class="tiny_logo github_logo" src="assets/github_1.png" alt="chrome logo">
+          </a>
+
         </section>
 
+        <!-- Space shooter -->
         <section class="portfolio_item">
-          <h2>Portfolio</h2>
-          <img src="assets/project1.png">
+          <h2>Space Shooter</h2>
+          <img src="assets/spaceshooter_homepage.png">
+          <img src="assets/spaceshooter_gamepage.png">
+
+          <p>
+            Our prompt in this project was to create a game, utilizing our knowledge of HTML, CSS, and Javascript to build our very first app. I chose a space shooter game in particular because I wanted a game that I'd want to play myself.
+
+            This game required a few key things to function:
+
+            <ul>
+              <li>Player movement</li>
+              <li>Bullet firing and</li>
+              <li>bullet movement</li>
+              <li>Collision detection</li>
+              <li>Use of get method to display player name on game page</li>
+            </ul>
+          </p>
+
+          <a href="https://dawa12.github.io/project_1_spaceshooter/">
+            <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+          <a href="https://github.com/Dawa12/project_1_spaceshooter">
+            <img class="tiny_logo github_logo" src="assets/github_1.png" alt="chrome logo">
+          </a>
         </section>
       </section>
 
-      <form id="contact_form">
+      <section id="contact_me">
+        <h1>Contact me!</h1>
+        <h2>Email:</h2>
+        <p>dasherpa7@gmail.com</p>
+        <a href="https://github.com/Dawa12?tab=repositories">
+          <img src="assets/github_1.png" alt=""></a>
+        <a href="https://www.linkedin.com/in/dawasherpa">
+          <img src="assets/linkedin_logo.png" alt=""></a>
+        <a href="https://twitter.com/thedawasherpa">
+          <img src="assets/twitter_logo.png" alt=""></a>
+      </section>
+
+
+      <!-- when form has text and is submitted, it alters zoom levels -->
+      <!-- <form id="contact_form">
         <h2>Contact Me</h1>
         <div>
           First Name: <input type="text" name="firstname" placeholder="First Name"><br>
         </div>
-
         <div>
           Last Name: <input type="text" name="lastname" placeholder="Last Name"><br>
         </div>
-
         <div>
           Message: <br>
           <textarea placeholder="Enter your Message"></textarea>
         </div>
-
         <div>
           <input type="submit" value="Submit">
         </div>
-      </form>
+      </form> -->
     </div>
 
 
