--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
       <section id="portfolio_container">
         <h1>Projects</h1>
 
+        <!-- portfolio item: EventsFinder -->
+        <section class="portfolio_item">
+          <h2>EventsFinder</h2>
+          <img src="assets/Events_Finder_events.png">
+          <img src="assets/Events_Finder_posts.png">
+
+          <p>
+            This app pulls from the Facebook Graph API and helps a user better follow the pages that he or she has liked and is a part of on facebook. When you choose to like a page and follow it, you expect to receive occasional or regular notifications. However, because organic reach of fan pages have declined considerably over the years, many users won't receive important updates from the pages they follow.
+
+            This app hopes to aggregate the most useful features that a person may want to know about a page he or she is a fan of. For example, you can view upcoming events as well as view recent posts of the pages that you are a fan of.
+          </p>
+
+          <a href="https://fan-page-follower.herokuapp.com/">
+            <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+          <a href="https://github.com/Dawa12/final-project">
+            <img class="tiny_logo github_logo" src="assets/github_1.png" alt="chrome logo">
+          </a>
+
+        </section>
+
+
         <!-- portfolio item: Track Map -->
         <section class="portfolio_item">
           <h2>Track Map</h2>
