Update test comment to force website update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </nav>
     </header>
 
-<!-- test comment -->
+<!-- test -->
 <!---*****  main *****--->
     <div id="main">
       <h1>Dawa Portfolio</h1>
