Add strong tags to Events Finder portfolio item and add unordered list of technologies used for app

--- a/index.html
+++ b/index.html
@@ -32,11 +32,28 @@
           <img src="assets/Events_Finder_events.png">
           <img src="assets/Events_Finder_posts.png">
 
+          <br>
+          <br>
           <p>
-            This app pulls from the Facebook Graph API and helps a user better follow the pages that he or she has liked and is a part of on facebook. When you choose to like a page and follow it, you expect to receive occasional or regular notifications. However, because organic reach of fan pages have declined considerably over the years, many users won't receive important updates from the pages they follow.
+            <strong>The problem</strong>
+            <br>
+            When you choose to like a Facebook page, whether it is of a celebrity, non-profit, cool company, or news organiation, you expect to receive occasional or regular notifications from that page. However, because organic reach of fan pages have declined considerably over the years, chances are, you'll see only a tiny fraction of those updates. According to one <a href="http://www.adweek.com/socialtimes/locowise-march-2015/619104">study,</a> organic reach for some pages is as low as 4%.
+            <br>
+            <br>
 
-            This app hopes to aggregate the most useful features that a person may want to know about a page he or she is a fan of. For example, you can view upcoming events as well as view recent posts of the pages that you are a fan of.
+            <strong>App solution</strong>
+            <br>
+            This app pulls data from the Facebook Graph API and helps you stay on top of the upcoming events of pages you've liked, as well as see their recent posts - all on one page.
           </p>
+
+          <h3>Technologies</h3>
+          <ul>
+            <li>Facebook Graph API</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>HTML, CSS, Javascript, Jquery</li>
+          </ul>
+
 
           <a href="https://fan-page-follower.herokuapp.com/">
             <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
