Increase image sizes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <strong>App solution</strong>
             <br>
-            This app pulls data from the Facebook Graph API and helps you stay on top of the upcoming events of pages you've liked, as well as see their recent posts - all on one page.
+            This app pulls data from the Facebook Graph API and helps you stay on top of the upcoming events of pages you've liked, as well as see their recent posts - all on one page
           </p>
 
           <h3>Technologies</h3>
