Add two jump links; for about and contact sections

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="#">Contact</a>
-        <a href="#">Contact</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
         <a href="#">Contact</a>
       </nav>
     </header>
@@ -17,6 +17,9 @@
 <!---*****  main *****--->
     <div id="main">
       <h1>Dawa Portfolio</h1>
+
+      <!-- Adding jump link for about section -->
+      <a name="about"></a>
       <section id="about">
         <h2>About me</h2>
         <img src="./assets/profile.jpg" alt="profile_pic" />
@@ -130,6 +133,7 @@
         </section>
       </section>
 
+      <a name="contact"></a>
       <section id="contact_me">
         <h1>Contact me!</h1>
         <h2>Email:</h2>
