--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Overall, the experience helped us work together under pressure, and become better communicators.
           </p>
 
-          <a href="#">
+          <a href="https://docs.google.com/presentation/d/11MvUOJi2tkgPhUelqxK1O47GyoGbwGfXJCgrYnfduJY/edit#slide=id.g13b75b0e82_0_299">
             <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
           <a href="https://github.com/Dawa12/columbia_university_hackathon">
             <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github logo">
