Create section for Resume; Add a tag with download link to resume pdf; add input button

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <nav>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-      <a href="#">Contact</a>
     </nav>
 
 <!---*****  main *****--->
     <div id="main">
       <h1>Dawa Portfolio</h1>
+      <a name="about"></a>
 
       <!-- Adding jump link for about section -->
-      <a name="about"></a>
       <section id="about">
         <h2>About me</h2>
         <img src="./assets/profile.jpg" alt="profile_pic" />
@@ -70,7 +69,6 @@
           <h2>Data Transparency Lab Hackathon @ Columbia University</h2>
           <img src="assets/DTL_hackathon/group_photo.png">
           <img src="assets/DTL_hackathon/pair_programming.png">
-          <img src="assets/DTL_hackathon/presenting_projects.png">
           <img src="assets/DTL_hackathon/receiving_award.png">
           <img src="assets/DTL_hackathon/winning_group_photo.png">
 
@@ -148,10 +146,18 @@
         </section>
       </section>
 
+      <section id="resume">
+        <h1>Resume</h1>
+        <a href="assets/Dawa%20G.%20Sherpa%20Resume.pdf" download>
+          <input type="button" value="Download Resume">
+        </a>
+
+      </section>
+
       <a name="contact"></a>
       <section id="contact_me">
         <h1>Contact me!</h1>
-        <h2>Email:</h2>
+        <!-- <h2>Email:</h2> -->
         <p>dasherpa7@gmail.com</p>
         <a href="https://github.com/Dawa12?tab=repositories">
           <img src="assets/github_1.png" alt=""></a>
