--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         <!-- <h2>Email:</h2> -->
         <p>dasherpa7@gmail.com</p>
         <a href="https://github.com/Dawa12?tab=repositories">
-          <img src="assets/github_1.png" alt=""></a>
+          <img class="tiny_logo" src="assets/github_1.png" alt=""></a>
         <a href="https://www.linkedin.com/in/dawasherpa">
-          <img src="assets/linkedin_logo.png" alt=""></a>
+          <img class="tiny_logo" src="assets/linkedin_logo.png" alt=""></a>
         <a href="https://twitter.com/thedawasherpa">
-          <img src="assets/twitter_logo.png" alt=""></a>
+          <img class="tiny_logo" src="assets/twitter_logo.png" alt=""></a>
       </section>
 
 
