--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Adding jump link for about section -->
       <section id="about">
         <h2>About me</h2>
-        <img src="./assets/profile.jpg" alt="profile_pic" />
+        <img id="profile-pic" src="./assets/profile.jpg" alt="profile_pic" title="that's me!"/>
         <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
       </section>
 
@@ -29,7 +29,7 @@
         <!-- portfolio item: EventsFinder -->
         <section class="portfolio_item">
           <h2>EventsFinder</h2>
-          <img src="assets/Events_Finder_events.png">
+          <img src="assets/Events_Finder_events.png" title="hello" alt="hello">
           <img src="assets/Events_Finder_posts.png">
 
           <br>
@@ -56,9 +56,10 @@
 
 
           <a href="https://fan-page-follower.herokuapp.com/">
-            <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+            <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo" title="View App on Heroku">
+          </a>
           <a href="https://github.com/Dawa12/final-project">
-            <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github_logo">
+            <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github_logo" title="View Project Code">
           </a>
 
         </section>
