--- a/index.html
+++ b/index.html
@@ -39,22 +39,20 @@
       </div>
     </nav>
 
-<!-- - *****  main *****- -->
+    <!-- - *****  main *****- -->
+    <!-- Adding jump link for about section -->
+    <a name="about"></a>
+    <section id="about">
+      <h1 id="main-title">Dawa Portfolio</h1>
+      <div id="about-description">
+        <h2>About me</h2>
+        <img id="profile-pic img-responsive" src="./assets/profile.jpg" alt="profile_pic" title="that's me!"/>
+        <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
+      </div>
+    </section>
     
-    <div class="container">
+    <div class="container container-fluid">
       <div id="main">
-        <!-- Adding jump link for about section -->
-        <a name="about"></a>
-        <section id="about">
-          <h1 id="main-title">Dawa Portfolio</h1>
-          <div id="about-description">
-            <h2>About me</h2>
-            <img id="profile-pic" src="./assets/profile.jpg" alt="profile_pic" title="that's me!"/>
-            <p>I'm a Jr. Web Developer who wants to make a positive impact on the world through my code projects. I enjoy creating things that truly help others and add value to their lives. Please check out my projects below!</p>
-          </div>
-        </section>
-
-
         <a name="projects"></a>
         <section id="portfolio_container">
           <div id="portfolio-wrapper">
@@ -63,8 +61,8 @@
             <!-- portfolio item: EventsFinder -->
             <section class="portfolio_item">
               <h2>EventsFinder</h2>
-              <img src="assets/Events_Finder_events.png" title="hello" alt="hello">
-              <img src="assets/Events_Finder_posts.png">
+              <im img-responsive" src="assets/Events_Finder_events.png" title="hello" alt="hello">
+              <im img-responsive" src="assets/Events_Finder_posts.png">
               <br>
               <br>
               <div>
@@ -98,10 +96,10 @@
               </div>
 
               <a href="https://fan-page-follower.herokuapp.com/">
-                <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo" title="View App on Heroku">
+                <img class="tiny_logo img-responsive" src="assets/chrome_logo.png" alt="chrome logo" title="View App on Heroku">
               </a>
               <a href="https://github.com/Dawa12/final-project">
-                <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github_logo" title="View Project Code">
+                <img class="tiny_logo github_logo img-responsive" src="assets/github_1.png" alt="github_logo" title="View Project Code">
               </a>
 
             </section>
@@ -110,10 +108,10 @@
             <!-- portfolio item: Columbia University Hackathon -->
             <section class="portfolio_item">
               <h2>Data Transparency Lab Hackathon @ Columbia University</h2>
-              <img src="assets/DTL_hackathon/group_photo.png">
-              <img src="assets/DTL_hackathon/pair_programming.png">
-              <img src="assets/DTL_hackathon/receiving_award.png">
-              <img src="assets/DTL_hackathon/winning_group_photo.png">
+              <im img-responsive" src="assets/DTL_hackathon/group_photo.png">
+              <im img-responsive" src="assets/DTL_hackathon/pair_programming.png">
+              <im img-responsive" src="assets/DTL_hackathon/receiving_award.png">
+              <im img-responsive" src="assets/DTL_hackathon/winning_group_photo.png">
 
               <p>
                 I entered the Data Transparency Lab Hackathon at Columbia University with two Web Development classmates and two friends from the UX class at General Assembly. It was a solid team particularly because the judging criteria for the hackathon was looking not only for technical difficutly but also for visual appeal.
@@ -129,9 +127,9 @@
               </p>
 
               <a href="https://docs.google.com/presentation/d/11MvUOJi2tkgPhUelqxK1O47GyoGbwGfXJCgrYnfduJY/edit#slide=id.g13b75b0e82_0_299">
-                <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+                <img class="tiny_logo img-responsive" src="assets/chrome_logo.png" alt="chrome logo"></a>
               <a href="https://github.com/Dawa12/columbia_university_hackathon">
-                <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github logo">
+                <img class="tiny_logo github_logo img-responsive" src="assets/github_1.png" alt="github logo">
               </a>
 
             </section>
@@ -140,8 +138,8 @@
             <!-- portfolio item: Track Map -->
             <section class="portfolio_item">
               <h2>Track Map</h2>
-              <img src="assets/track_map_map.png">
-              <img src="assets/track_map_street_view.png">
+              <im img-responsive" src="assets/track_map_map.png">
+              <im img-responsive" src="assets/track_map_street_view.png">
 
               <p>
                 I developed Track Map to gain practice in working with an API and rendering API results in our very own Node Express app. I chose the Google Maps API because I wanted hands on experience with a very well known API. I knew that there would be better documentation for it and also felt it would be more likely for me to use again.
@@ -151,9 +149,9 @@
               </p>
 
               <a href="https://nyc-track-map.herokuapp.com/">
-                <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+                <img class="tiny_logo img-responsive" src="assets/chrome_logo.png" alt="chrome logo"></a>
               <a href="https://github.com/Dawa12/Google_Maps_Street_View">
-                <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github_logo">
+                <img class="tiny_logo github_logo img-responsive" src="assets/github_1.png" alt="github_logo">
               </a>
 
             </section>
@@ -161,8 +159,8 @@
             <!-- Space shooter -->
             <section class="portfolio_item">
               <h2>Space Shooter</h2>
-              <img src="assets/spaceshooter_homepage.png">
-              <img src="assets/spaceshooter_gamepage.png">
+              <im img-responsive" src="assets/spaceshooter_homepage.png">
+              <im img-responsive" src="assets/spaceshooter_gamepage.png">
 
               <p>
                 Our prompt in this project was to create a game, utilizing our knowledge of HTML, CSS, and Javascript to build our very first app. I chose a space shooter game in particular because I wanted a game that I'd want to play myself.
@@ -179,9 +177,9 @@
               </p>
 
               <a href="https://dawa12.github.io/project_1_spaceshooter/">
-                <img class="tiny_logo" src="assets/chrome_logo.png" alt="chrome logo"></a>
+                <img class="tiny_logo img-responsive" src="assets/chrome_logo.png" alt="chrome logo"></a>
               <a href="https://github.com/Dawa12/project_1_spaceshooter">
-                <img class="tiny_logo github_logo" src="assets/github_1.png" alt="github_logo">
+                <img class="tiny_logo github_logo img-responsive" src="assets/github_1.png" alt="github_logo">
               </a>
             </section>
           <div></div>
@@ -202,11 +200,11 @@
           <!-- <h2>Email:</h2> -->
           <p>dasherpa7@gmail.com</p>
           <a href="https://github.com/Dawa12?tab=repositories">
-            <img class="tiny_logo" src="assets/github_1.png" alt=""></a>
+            <img class="tiny_logo img-responsive" src="assets/github_1.png" alt=""></a>
           <a href="https://www.linkedin.com/in/dawasherpa">
-            <img class="tiny_logo" src="assets/linkedin_logo.png" alt=""></a>
+            <img class="tiny_logo img-responsive" src="assets/linkedin_logo.png" alt=""></a>
           <a href="https://twitter.com/thedawasherpa">
-            <img class="tiny_logo" src="assets/twitter_logo.png" alt=""></a>
+            <img class="tiny_logo img-responsive" src="assets/twitter_logo.png" alt=""></a>
         </section>
 
 
