--- a/app/index.html
+++ b/app/index.html
@@ -264,7 +264,7 @@
 <!-- <a name="projects"></a> -->
           <h1>Resume</h1>
           <a href="assets/Dawa%20G.%20Sherpa%20Resume.pdf" download>
-            <input type="button" value="Download Resume">
+            <button type="button" class="btn btn-primary btn-lg">Download Resume</button>
           </a>
 
         </section>
